--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,1 +1,8 @@
-<h1> Ask template </h1>
+<div class="container">
+  <h1> Stupid Coaching </h1>
+
+  <form action="/answer" method="get">
+    <input type="text" class="text" name="question">
+    <input type="submit" class="submit" value="Ask!">
+  </form>
+</div>
